--- a/jazzCatsApp/ViewController/Main.storyboard
+++ b/jazzCatsApp/ViewController/Main.storyboard
@@ -53,7 +53,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
-                        <color key="backgroundColor" red="0.97254902119999997" green="0.92156863209999995" blue="0.91372549530000002" alpha="1" colorSpace="deviceRGB"/>
+                        <color key="backgroundColor" red="1" green="0.80392156862745101" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="LV4-BC-jQU" firstAttribute="centerX" secondItem="lSK-Ur-ksn" secondAttribute="centerX" id="1kc-Dm-YPn"/>
                             <constraint firstItem="RSa-qi-kX1" firstAttribute="centerX" secondItem="lSK-Ur-ksn" secondAttribute="centerX" id="2Dv-xW-q89"/>
@@ -133,7 +133,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.97254902119999997" green="0.92156863209999995" blue="0.91372549530000002" alpha="1" colorSpace="deviceRGB"/>
+                        <color key="backgroundColor" red="1" green="0.80392156862745101" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="T2P-1d-sTn" firstAttribute="top" secondItem="PGK-bl-sdO" secondAttribute="bottom" constant="24" id="0ug-I9-scN"/>
                             <constraint firstItem="9bb-uo-pJW" firstAttribute="centerY" secondItem="p4r-CQ-pk1" secondAttribute="centerY" id="ADS-8V-OLw"/>
@@ -175,18 +175,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Fd-0C-cez">
-                                <rect key="frame" x="416.5" y="265" width="63" height="30"/>
+                                <rect key="frame" x="416.5" y="282" width="63" height="30"/>
                                 <state key="normal" title="Freestyle"/>
                                 <connections>
                                     <action selector="goToFreestyle:" destination="dec-BY-2yf" eventType="touchUpInside" id="exh-Ox-eJT"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xwI-vr-1dK" userLabel="currentUser">
-                                <rect key="frame" x="243" y="123" width="71" height="36"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="edd-Rg-unA">
                                 <rect key="frame" x="785" y="20" width="57" height="30"/>
                                 <state key="normal" title="Sign out"/>
@@ -195,27 +189,35 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rn4-dd-hW6">
-                                <rect key="frame" x="403" y="100" width="90" height="30"/>
+                                <rect key="frame" x="403" y="224" width="90" height="30"/>
                                 <state key="normal" title="Level Groups"/>
                                 <connections>
                                     <action selector="goToLevelGroups:" destination="dec-BY-2yf" eventType="touchUpInside" id="6J9-36-Pst"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xwI-vr-1dK" userLabel="currentUser">
+                                <rect key="frame" x="412.5" y="91" width="71" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="1" green="0.80392156862745101" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="GyB-rx-roN" firstAttribute="trailing" secondItem="edd-Rg-unA" secondAttribute="trailing" constant="10" id="E5n-dA-Qad"/>
                             <constraint firstItem="Rn4-dd-hW6" firstAttribute="centerX" secondItem="hhp-mo-ldP" secondAttribute="centerX" id="OeQ-x8-cSm"/>
-                            <constraint firstItem="GyB-rx-roN" firstAttribute="bottom" secondItem="1Fd-0C-cez" secondAttribute="bottom" constant="98" id="Qo2-Hf-pPg"/>
+                            <constraint firstItem="xwI-vr-1dK" firstAttribute="centerX" secondItem="hhp-mo-ldP" secondAttribute="centerX" id="PCe-o7-1de"/>
+                            <constraint firstItem="GyB-rx-roN" firstAttribute="bottom" secondItem="1Fd-0C-cez" secondAttribute="bottom" constant="81" id="PZl-WT-R5B"/>
                             <constraint firstItem="edd-Rg-unA" firstAttribute="top" secondItem="GyB-rx-roN" secondAttribute="top" constant="20" id="Tg3-dt-tD9"/>
-                            <constraint firstItem="Rn4-dd-hW6" firstAttribute="top" secondItem="GyB-rx-roN" secondAttribute="top" constant="100" id="WM0-zU-WaR"/>
                             <constraint firstItem="1Fd-0C-cez" firstAttribute="centerX" secondItem="hhp-mo-ldP" secondAttribute="centerX" id="aKC-sV-dW5"/>
-                            <constraint firstItem="Rn4-dd-hW6" firstAttribute="leading" secondItem="xwI-vr-1dK" secondAttribute="trailing" constant="89" id="cu4-Yx-dyn"/>
-                            <constraint firstItem="xwI-vr-1dK" firstAttribute="top" secondItem="GyB-rx-roN" secondAttribute="top" constant="123" id="y19-mL-0OS"/>
+                            <constraint firstItem="1Fd-0C-cez" firstAttribute="top" secondItem="Rn4-dd-hW6" secondAttribute="bottom" constant="28" id="dpe-YZ-PXO"/>
+                            <constraint firstItem="xwI-vr-1dK" firstAttribute="top" secondItem="GyB-rx-roN" secondAttribute="top" constant="91" id="zr9-9h-hLe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="GyB-rx-roN"/>
                     </view>
                     <connections>
+                        <outlet property="freestyleButton" destination="1Fd-0C-cez" id="qft-Q3-vU2"/>
+                        <outlet property="playButton" destination="Rn4-dd-hW6" id="yFa-gG-tWR"/>
                         <outlet property="userIDLabel" destination="xwI-vr-1dK" id="B0X-KY-8Y4"/>
                         <segue destination="uKC-AO-KPp" kind="presentation" identifier="fromWelcomeToFreestyleSegue" id="GLW-ER-AVP"/>
                         <segue destination="5qc-HS-yo8" kind="presentation" identifier="fromWelcomeToSignInSegue" id="mba-eb-Z7X"/>
@@ -243,7 +245,7 @@
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NIK-j1-OjF">
                                 <rect key="frame" x="0.0" y="58" width="896" height="298"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" red="1" green="0.80392156859999997" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="30" minimumInteritemSpacing="10" id="lof-V2-OjE" customClass="SnapToCenter" customModule="jazzCatsApp" customModuleProvider="target">
                                     <size key="itemSize" width="400" height="200"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -281,7 +283,7 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="1" green="0.80392156862745101" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="U5U-G5-Nvo" firstAttribute="top" secondItem="mXU-uT-XKR" secondAttribute="top" constant="20" id="8S1-4r-e85"/>
                             <constraint firstItem="NIK-j1-OjF" firstAttribute="top" secondItem="U5U-G5-Nvo" secondAttribute="bottom" constant="8" id="Hg7-jQ-tmS"/>
@@ -320,7 +322,7 @@
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="a3V-IE-ijI">
                                 <rect key="frame" x="120" y="58" width="656" height="335"/>
-                                <color key="backgroundColor" red="0.97254902119999997" green="0.92156863209999995" blue="0.91372549530000002" alpha="1" colorSpace="deviceRGB"/>
+                                <color key="backgroundColor" red="1" green="0.80392156862745101" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="335" id="JcC-zj-I0h"/>
                                 </constraints>
@@ -362,7 +364,7 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" red="0.97254902119999997" green="0.92156863209999995" blue="0.91372549530000002" alpha="1" colorSpace="deviceRGB"/>
+                        <color key="backgroundColor" red="1" green="0.80392156862745101" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="a3V-IE-ijI" firstAttribute="top" secondItem="Alr-c2-wVp" secondAttribute="bottom" constant="8" id="1fD-8a-zoQ"/>
                             <constraint firstItem="a3V-IE-ijI" firstAttribute="bottom" secondItem="nGk-aJ-aHf" secondAttribute="bottom" id="5tB-K7-c5n"/>
@@ -552,6 +554,7 @@
                         <viewLayoutGuide key="safeArea" id="99E-MF-4mA"/>
                     </view>
                     <connections>
+                        <outlet property="popupView" destination="zWm-5I-Tvi" id="nRS-Or-Nvc"/>
                         <outletCollection property="settingValues" destination="fRu-lf-mGO" collectionClass="NSMutableArray" id="9L5-Ud-H3m"/>
                         <outletCollection property="settingValues" destination="bkW-D2-kyF" collectionClass="NSMutableArray" id="6YR-cS-Y8F"/>
                         <outletCollection property="settingValues" destination="D0E-c9-HmT" collectionClass="NSMutableArray" id="dBQ-3Z-ezE"/>
@@ -653,6 +656,7 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="lkd-YW-Xu8" id="734-9Y-Cy8"/>
+                        <outlet property="collectionViewPopup" destination="lkd-YW-Xu8" id="uHW-9w-Xbc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bwu-wx-P63" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -661,6 +665,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Lga-rB-OrQ"/>
+        <segue reference="GLW-ER-AVP"/>
     </inferredMetricsTieBreakers>
 </document>
