--- a/jazzCatsApp/ViewController/Main.storyboard
+++ b/jazzCatsApp/ViewController/Main.storyboard
@@ -193,9 +193,14 @@
                                     <action selector="goToFreestyle:" destination="dec-BY-2yf" eventType="touchUpInside" id="exh-Ox-eJT"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="edd-Rg-unA">
-                                <rect key="frame" x="785" y="20" width="57" height="30"/>
-                                <state key="normal" title="Sign out"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="edd-Rg-unA">
+                                <rect key="frame" x="797" y="20" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="BHu-BA-qUz"/>
+                                    <constraint firstAttribute="width" constant="45" id="hhR-0O-g6s"/>
+                                </constraints>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="person" catalog="system"/>
                                 <connections>
                                     <action selector="signOut:" destination="dec-BY-2yf" eventType="touchUpInside" id="0ue-8e-1J5"/>
                                 </connections>
@@ -232,6 +237,7 @@
                         <viewLayoutGuide key="safeArea" id="GyB-rx-roN"/>
                     </view>
                     <connections>
+                        <outlet property="accountButton" destination="edd-Rg-unA" id="ipP-Uu-COk"/>
                         <outlet property="freestyleButton" destination="1Fd-0C-cez" id="qft-Q3-vU2"/>
                         <outlet property="playButton" destination="Rn4-dd-hW6" id="yFa-gG-tWR"/>
                         <outlet property="userIDLabel" destination="xwI-vr-1dK" id="B0X-KY-8Y4"/>
@@ -242,7 +248,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7HT-fr-dfd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="39" y="-1072"/>
+            <point key="canvasLocation" x="38.839285714285715" y="-1072.463768115942"/>
         </scene>
         <!--Level GroupsVC-->
         <scene sceneID="VPB-dH-9Et">
@@ -269,6 +275,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="400" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g4N-2Y-Hcp">
+                                                    <rect key="frame" x="0.0" y="0.0" width="400" height="200"/>
+                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xk3-W1-Rlb">
                                                     <rect key="frame" x="174.5" y="88" width="51.5" height="24"/>
                                                     <fontDescription key="fontDescription" name="Gaegu-Regular" family="Gaegu" pointSize="24"/>
@@ -277,11 +286,16 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="g4N-2Y-Hcp" secondAttribute="trailing" id="Eyy-nK-F5Q"/>
                                                 <constraint firstItem="xk3-W1-Rlb" firstAttribute="centerX" secondItem="E48-7e-wAi" secondAttribute="centerX" id="Y8q-6y-Bpg"/>
+                                                <constraint firstItem="g4N-2Y-Hcp" firstAttribute="leading" secondItem="E48-7e-wAi" secondAttribute="leading" id="fAR-74-mfY"/>
+                                                <constraint firstAttribute="bottom" secondItem="g4N-2Y-Hcp" secondAttribute="bottom" id="fVd-BG-XsB"/>
                                                 <constraint firstItem="xk3-W1-Rlb" firstAttribute="centerY" secondItem="E48-7e-wAi" secondAttribute="centerY" id="hSB-Ow-RXW"/>
+                                                <constraint firstItem="g4N-2Y-Hcp" firstAttribute="top" secondItem="E48-7e-wAi" secondAttribute="top" id="xPt-q2-XTP"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
+                                            <outlet property="levelGroupBkgd" destination="g4N-2Y-Hcp" id="VTh-nM-Fhe"/>
                                             <outlet property="levelGroupLabel" destination="xk3-W1-Rlb" id="Kas-R8-BoP"/>
                                         </connections>
                                     </collectionViewCell>
@@ -724,5 +738,6 @@
     </inferredMetricsTieBreakers>
     <resources>
         <image name="arrow.left" catalog="system" width="128" height="98"/>
+        <image name="person" catalog="system" width="128" height="117"/>
     </resources>
 </document>
