--- a/jazzCatsApp/ViewController/Main.storyboard
+++ b/jazzCatsApp/ViewController/Main.storyboard
@@ -638,6 +638,81 @@
             </objects>
             <point key="canvasLocation" x="402" y="607"/>
         </scene>
+        <!--Tutorial PopupVC-->
+        <scene sceneID="wKQ-6M-gT2">
+            <objects>
+                <viewController storyboardIdentifier="tutorialPopoverID" id="MFc-sL-GKx" customClass="TutorialPopupVC" customModule="jazzCatsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OZQ-u6-XEI">
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kmD-6Q-a3G">
+                                <rect key="frame" x="148" y="253" width="600" height="120"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="etB-X9-Xs7">
+                                        <rect key="frame" x="0.0" y="20" width="600" height="100"/>
+                                        <fontDescription key="fontDescription" name="Gaegu-Regular" family="Gaegu" pointSize="24"/>
+                                        <state key="normal">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="buttonFramePressed:" destination="MFc-sL-GKx" eventType="touchUpInside" id="PUQ-jE-UGQ"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nUC-ZJ-AFp">
+                                        <rect key="frame" x="30" y="30" width="540" height="24"/>
+                                        <fontDescription key="fontDescription" name="Gaegu-Regular" family="Gaegu" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to continue..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wTD-5l-RtM">
+                                        <rect key="frame" x="473" y="98" width="127" height="17"/>
+                                        <fontDescription key="fontDescription" name="Gaegu-Regular" family="Gaegu" pointSize="17"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="etB-X9-Xs7" secondAttribute="bottom" id="5hc-eU-Rj2"/>
+                                    <constraint firstItem="wTD-5l-RtM" firstAttribute="bottom" secondItem="etB-X9-Xs7" secondAttribute="bottom" constant="-5" id="8Lq-C7-nqu"/>
+                                    <constraint firstItem="etB-X9-Xs7" firstAttribute="width" secondItem="kmD-6Q-a3G" secondAttribute="width" id="AWG-4U-NXO"/>
+                                    <constraint firstItem="nUC-ZJ-AFp" firstAttribute="width" secondItem="etB-X9-Xs7" secondAttribute="width" multiplier="0.9" id="EtY-CP-kWt"/>
+                                    <constraint firstItem="nUC-ZJ-AFp" firstAttribute="centerX" secondItem="etB-X9-Xs7" secondAttribute="centerX" id="JHH-Ux-F5B"/>
+                                    <constraint firstItem="etB-X9-Xs7" firstAttribute="height" secondItem="kmD-6Q-a3G" secondAttribute="height" constant="-20" id="Kvg-NJ-Voi"/>
+                                    <constraint firstItem="etB-X9-Xs7" firstAttribute="centerX" secondItem="kmD-6Q-a3G" secondAttribute="centerX" id="ZBi-M0-uqL"/>
+                                    <constraint firstAttribute="height" constant="120" id="fje-zl-iyS"/>
+                                    <constraint firstItem="wTD-5l-RtM" firstAttribute="trailing" secondItem="etB-X9-Xs7" secondAttribute="trailing" id="tc5-wC-xuQ"/>
+                                    <constraint firstAttribute="width" constant="600" id="y2k-H4-Pe2"/>
+                                    <constraint firstItem="nUC-ZJ-AFp" firstAttribute="top" secondItem="etB-X9-Xs7" secondAttribute="top" constant="10" id="zBD-wY-VOE"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="kmD-6Q-a3G" firstAttribute="centerX" secondItem="OZQ-u6-XEI" secondAttribute="centerX" id="Fcl-EH-a1h"/>
+                            <constraint firstItem="kmD-6Q-a3G" firstAttribute="top" secondItem="oBD-D2-OLo" secondAttribute="top" constant="20" id="H9y-zt-jf6"/>
+                            <constraint firstItem="oBD-D2-OLo" firstAttribute="bottom" secondItem="kmD-6Q-a3G" secondAttribute="bottom" constant="20" id="cVr-Wx-e9g"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="oBD-D2-OLo"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="H9y-zt-jf6"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="buttonFrame" destination="etB-X9-Xs7" id="JAE-qV-yug"/>
+                        <outlet property="dialogueBottomConstraint" destination="cVr-Wx-e9g" id="3bL-BX-NpN"/>
+                        <outlet property="dialogueBox" destination="nUC-ZJ-AFp" id="aWs-rP-QxP"/>
+                        <outlet property="dialogueTopConstraint" destination="H9y-zt-jf6" id="fDY-29-KR9"/>
+                        <outlet property="dialogueView" destination="kmD-6Q-a3G" id="8ot-MI-kWC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sac-bD-FxD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1069.4196428571429" y="605.79710144927537"/>
+        </scene>
         <!--Note Select PopupVC-->
         <scene sceneID="uvy-fh-Q99">
             <objects>
